{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 44,
  "lineage": "f557d8b1-4885-9ae0-43f6-a1a6f9d5a8e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b98cdab22f64e36b",
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:elastic-ip/eipalloc-0b98cdab22f64e36b",
            "association_id": "eipassoc-0c14de63b6ffc96c4",
            "domain": "vpc",
            "id": "eipalloc-0b98cdab22f64e36b",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-07532c1b1d0861fa0",
            "private_dns": "ip-10-0-0-140.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.140",
            "public_dns": "ec2-52-78-81-43.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.81.43",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:internet-gateway/igw-0b56d9a6a267548c9",
            "id": "igw-0b56d9a6a267548c9",
            "owner_id": "907978044268",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-101-igw"
            },
            "tags_all": {
              "Name": "terraform-101-igw"
            },
            "vpc_id": "vpc-08556b133bece4e5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b98cdab22f64e36b",
            "association_id": "eipassoc-0c14de63b6ffc96c4",
            "connectivity_type": "public",
            "id": "nat-0512012a4080fd4e2",
            "network_interface_id": "eni-07532c1b1d0861fa0",
            "private_ip": "10.0.0.140",
            "public_ip": "52.78.81.43",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03ebecfde50b060b2",
            "tags": {
              "Name": "terraform-NATGW"
            },
            "tags_all": {
              "Name": "terraform-NATGW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03ffa8a27c29d4ab71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0512012a4080fd4e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ffa8a27c29d4ab7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "907978044268",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ffa8a27c29d4ab7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:route-table/rtb-03ffa8a27c29d4ab7",
            "id": "rtb-03ffa8a27c29d4ab7",
            "owner_id": "907978044268",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0512012a4080fd4e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-101-rt-private"
            },
            "tags_all": {
              "Name": "terraform-101-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08556b133bece4e5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "907978044268",
            "id": "rtb-03ffa8a27c29d4ab7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:route-table/rtb-06bac4650339e9b2e",
            "id": "rtb-06bac4650339e9b2e",
            "owner_id": "907978044268",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b56d9a6a267548c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-101-rt-public"
            },
            "tags_all": {
              "Name": "terraform-101-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08556b133bece4e5d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "907978044268",
            "id": "rtb-06bac4650339e9b2e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_route_table_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfeb6ee7dfaecc40",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-03ffa8a27c29d4ab7",
            "subnet_id": "subnet-089c1faf4b8a6e0dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_route_table_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c408b1019fecea8",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-06bac4650339e9b2e",
            "subnet_id": "subnet-03ebecfde50b060b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:subnet/subnet-089c1faf4b8a6e0dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089c1faf4b8a6e0dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907978044268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-101-private-subnet"
            },
            "tags_all": {
              "Name": "terraform-101-private-subnet"
            },
            "vpc_id": "vpc-08556b133bece4e5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "907978044268",
            "id": "subnet-089c1faf4b8a6e0dd",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:subnet/subnet-03ebecfde50b060b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ebecfde50b060b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "907978044268",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-101-public-subnet"
            },
            "tags_all": {
              "Name": "terraform-101-public-subnet"
            },
            "vpc_id": "vpc-08556b133bece4e5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "907978044268",
            "id": "subnet-03ebecfde50b060b2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:vpc/vpc-08556b133bece4e5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b147f64418c29178",
            "default_route_table_id": "rtb-0522b97edd69535bd",
            "default_security_group_id": "sg-0019d26788dedf2df",
            "dhcp_options_id": "dopt-0d57ad7f3e0a7f42e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08556b133bece4e5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0522b97edd69535bd",
            "owner_id": "907978044268",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "terraform-101"
            },
            "tags_all": {
              "Name": "terraform-101"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "907978044268",
            "id": "vpc-08556b133bece4e5d",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:907978044268:vpc-endpoint/vpce-0784a8722771e3c2c",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-0784a8722771e3c2c",
            "owner_id": "907978044268",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "terraform-101-ep"
            },
            "tags_all": {
              "Name": "terraform-101-ep"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08556b133bece4e5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "907978044268",
            "id": "vpce-0784a8722771e3c2c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}